--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,10 +1,13 @@
 @import "tailwindcss";
+@import url("https://fonts.googleapis.com/css2?family=Jersey+15&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&family=Poppins&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sixtyfour+Convergence&display=swap");
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
 }
-
+body{
+  font-family: "Roboto Flex", sans-serif;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
